--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -217,7 +217,7 @@ textarea{
 	font-weight:700;
 	border: 0px;
 	animation-name: a-morebtn;
-	animation-duration: 1200ms;
+	animation-duration: 1500ms;
 	animation-iteration-count: infinite;
 	animation-timing-function: ease-out;
 	&:hover{
@@ -544,15 +544,6 @@ ul li{
 .hidden-class{
 	visibility:hidden;
 }
-
-
-
-
-/*!
-*CUSTOM ANIMATION
-*
-*/
-
 
 
 
